# pdf-ua-linter

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/pdfua/: __init__.py  cli.py  extract.py  rules.py
tests/: test_rules.py
