[project]
name = "technika11y-pdf-ua-linter"
version = "0.1.0a0"
description = "Lints PDFs for PDF/UA (ISO 14289) conformance — tags, title, language, figure alt text — mapped to Matterhorn Protocol checkpoints."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["pypdf>=4.0"]
keywords = ["pdf", "pdf-ua", "accessibility", "a11y", "iso-14289", "matterhorn", "section-508"]

[project.scripts]
pdf-ua-linter = "pdfua.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pdfua"]
